fixed logo z-index

--- a/web/components/Logo/Logo.module.sass
+++ b/web/components/Logo/Logo.module.sass
@@ -16,7 +16,7 @@
     left:  10px
     z-index: 2
     background-color: #ffffff
-    transform: perspective(500px) rotateY(-1deg) rotateX(-30deg) rotateZ(3deg)
+    transform: translate3d(0,0,-20px) perspective(500px) rotateY(-1deg) rotateX(-30deg) rotateZ(3deg)
     border-radius: $border-radius
     box-shadow: $box-shadow
     @include media(">=iphone6")
